# solving_2048_on_4x3_board

./: CMakeLists.txt  README.md  num_found_states.txt
mid2048/: CMakeLists.txt  board.cc  board.h  types.h
test/: CMakeLists.txt  board_test.cc
